# Research_code

./: README.md  pyproject.toml  requirements.txt
Raw_files/: ecolar_rbpf.py  ecolar_rbpf_3.py  rbpf_hist_q_v2.py  rbpf_synthdata.py
configs/: demo.yaml
src/rbpf_lab/: __init__.py  cli.py  config.py  data_loading.py  ekf.py  model.py  parameters.py  rbpf.py  runner.py  signals.py  ukf.py
